--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
                 <div class="row mt-3">
                     <div class="col-12">
                         <div class="tiles-display">
-                            <dynamic-view class="" [data]="data" [template]="composeSVGTemplate()"></dynamic-view>
+                            <dynamic-view class="" [tools]="dataTools" [template]="composeSVGTemplate()"></dynamic-view>
                         </div>
                     </div>
                 </div>
