--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -25,7 +25,6 @@ h6 {
 }
 /deep/ .tiles-row {
 	line-height: 0;
-	width: 900px;
 }
 
 h3 {
@@ -48,6 +47,33 @@ textarea {
 .tiles-display {
 	background: #888;
 	padding: 50px;
+	position: relative;
+}
+.tiles-display .tiles-display-text-top {
+	position: absolute;
+	top: 5px;
+	left: 50px;
+	color: white;
+	line-height: 18px;
+}
+.tiles-display .tiles-display-text-top input {
+	vertical-align: middle;
+}
+.tiles-display .tiles-display-options-bottom {
+	position: absolute;
+	left: 50px;
+	color: white;
+	line-height: 16px;
+}
+.tiles-display .tile-dimensions-form input {
+	background: transparent;
+	border: white 1px solid;
+	color: white;
+	line-height: 14px;
+	width: 60px;
+	margin: 0 15px 0 5px;
+	height: 20px;
+	padding-left: 5px;
 }
 .tiles-display dynamic-view {
 	background: #fff;
