component setup for info tab

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,6 +49,7 @@
         </ngb-tab>
         <ngb-tab title="Info">
             <ng-template ngbTabContent>
+                <info-tab></info-tab>
             </ng-template>
         </ngb-tab>
     </ngb-tabset>
