--- a/src/app/info-tab/info-tab.component.css
+++ b/src/app/info-tab/info-tab.component.css
@@ -7,3 +7,10 @@ img {
     max-width: 100%;
     margin: 10px 0;
 }
+a.try-link {
+    display: block;
+    margin-bottom: 10px;
+    color: #009999;
+    margin-top: -14px;
+    text-decoration: underline;
+}
