--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -10,18 +10,19 @@
 /deep/ .nav-item {
 	font-size: 18px;
 }
-/deep/ a, /deep/ a:hover {
-    color: #47ffff;
-}
 /deep/ .nav-tabs .nav-link:hover {
 	border-color: #47ffff;
 	border-bottom: none;
 }
-/deep/ .nav-tabs .nav-link.active {
+/deep/ .nav-tabs .nav-link {
     color: #00cccc;
+}
+/deep/ .nav-tabs .nav-link.active {
+    color: #009999;
 }
 /deep/ .tiles-row {
 	line-height: 0;
+	background-color: #fff;
 }
 button {
 	color: #008888;
@@ -54,7 +55,8 @@ textarea {
 	position: absolute;
 	left: 50px;
 	color: white;
-	line-height: 16px;
+	line-height: 12px;
+	margin-top: 3px;
 }
 .tiles-display .tile-dimensions-form input {
 	background: transparent;
@@ -67,10 +69,15 @@ textarea {
 	padding-left: 5px;
 }
 .tiles-display dynamic-view {
-	background: #fff;
+	background: #888;
 	width: 100%;
 	height: 350px;
 	display: inline-block;
 	margin: 0 auto;
 	overflow: hidden;
 }
+@media (min-width: 1200px) {
+.tiles-display dynamic-view {
+	justify-content: center!important;
+	display: flex!important;
+}}
