mention saving in info text

--- a/src/app/info-tab/info-tab.component.html
+++ b/src/app/info-tab/info-tab.component.html
@@ -23,7 +23,8 @@
     template by the app before rendering. The app replicates the SVG element
     generated from the template in a 3x3 grid so the user can see how the tiles
     fit together. The user can make app show tile borders (grid lines) and change 
-    tile dimensions.
+    tile dimensions. The resulting SVG code for a single tile can be saved locally 
+    by clicking "Save SVG" link.
 </p>
 
 <h3>Helper <code>tools</code> object</h3>
